--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
     margin-left: 100px;
-    background-image: url(https://cdn.pixabay.com/photo/2016/11/23/15/48/audience-1853662_960_720.jpg);
+    background-image: url(https://images.pexels.com/photos/1190297/pexels-photo-1190297.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
 }
 
 
