--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 
 body{
-    margin-left: 100px;
+    
     background-image: url(https://images.pexels.com/photos/1190297/pexels-photo-1190297.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
+    background-size: cover;
+    background-repeat: no-repeat;
+    
 }
 
 
